--- a/app/views/renalware/pd_regimes/_pd_regime_bags.html.slim
+++ b/app/views/renalware/pd_regimes/_pd_regime_bags.html.slim
@@ -1,13 +1,13 @@
 h5.section-underliner Bags
 
-#pd-regime-bags.large-12.columns.add-bag
-  = r.fields_for :pd_regime_bags do |rb|
+.row
+  .large-12.columns
+    #pd-regime-bags.add-bag
+      = r.fields_for :pd_regime_bags do |rb|
+        = field_set_tag do
+          = render partial: 'renalware/pd_regimes/bags/form', locals: {rb: rb}
 
-    = field_set_tag do
-      = render partial: 'renalware/pd_regimes/bags/form', locals: {rb: rb}
-
-.large-12.columns.add-bag
-  .large-2.columns.right class="#{highlight_add_bag_invalid(r.object)}"
-    = r.submit 'Add Bag', name: 'actions[add]', data: { target: "#pd-regime-bags" }, class: 'add-bag right'
-    = r.link_to_add 'Add Bag', :pd_regime_bags, data: { target: "#pd-regime-bags" }, class: 'add-bag hide right'
-
+    .large-12.columns.add-bag
+      .right class="#{highlight_add_bag_invalid(r.object)}"
+        = r.submit 'Add Bag', name: 'actions[add]', data: { target: "#pd-regime-bags" }, class: 'add-bag right'
+        = r.link_to_add 'Add Bag', :pd_regime_bags, data: { target: "#pd-regime-bags" }, class: 'add-bag hide right'
