--- a/app/views/renalware/pd_regimes/bags/_form.html.slim
+++ b/app/views/renalware/pd_regimes/bags/_form.html.slim
@@ -9,26 +9,25 @@
     = rb.label :volume, 'Volume (ml)'
     = rb.select :volume, Renalware::BagVolume.values, { prompt: "Please select from options" }, class: "pd-regime-bag-volume-select"
 
-  .large-2.columns.inline
-    = rb.submit 'Remove', name: "actions[remove][#{rb.index}]", class: 'right remove-bag'
-    = rb.link_to_remove 'Remove', class: 'remove-bag hide'
+  .large-2.columns
+    .right
+      = rb.submit 'Remove', name: "actions[remove][#{rb.index}]", class: 'right remove-bag'
+      = rb.link_to_remove 'Remove', class: 'remove-bag hide'
 
 .row
-  .large-10.columns
+  .large-12.columns class="#{highlight_days_invalid(rb.object)}"
     label Days to be administered:
-
-    .large-12.columns class="#{highlight_days_invalid(rb.object)}"
-      = rb.check_box :sunday, class: 'inline'
-      = rb.label :sunday
-      = rb.check_box :monday, class: 'inline'
-      = rb.label :monday
-      = rb.check_box :tuesday, class: 'inline'
-      = rb.label :tuesday
-      = rb.check_box :wednesday, class: 'inline'
-      = rb.label :wednesday
-      = rb.check_box :thursday, class: 'inline'
-      = rb.label :thursday
-      = rb.check_box :friday, class: 'inline'
-      = rb.label :friday
-      = rb.check_box :saturday, class: 'inline'
-      = rb.label :saturday
+    = rb.check_box :sunday, class: 'inline'
+    = rb.label :sunday
+    = rb.check_box :monday, class: 'inline'
+    = rb.label :monday
+    = rb.check_box :tuesday, class: 'inline'
+    = rb.label :tuesday
+    = rb.check_box :wednesday, class: 'inline'
+    = rb.label :wednesday
+    = rb.check_box :thursday, class: 'inline'
+    = rb.label :thursday
+    = rb.check_box :friday, class: 'inline'
+    = rb.label :friday
+    = rb.check_box :saturday, class: 'inline'
+    = rb.label :saturday
