Extract 'global' styles
- the global stylesheet becomes a dumping ground for styles
- stylesheets with more specific names help guides organization

--- a/app/assets/stylesheets/renalware/forms.css.scss
+++ b/app/assets/stylesheets/renalware/forms.css.scss
@@ -12,6 +12,19 @@ form {
   }
 }
 
+fieldset {
+  padding: 1em;
+
+  dt {
+    font-weight: normal;
+    color: rgb(153, 153, 153);
+  }
+
+  .button {
+    margin-bottom: 0;
+  }
+}
+
 .document form {
   .form-content {
     max-width: 960px;
