--- a/app/assets/stylesheets/renalware/toggle.css.scss
+++ b/app/assets/stylesheets/renalware/toggle.css.scss
@@ -1,3 +1,7 @@
+.accordion .accordion-navigation > .content, .accordion dd > .content {
+  padding: 0;
+}
+
 .accordion .accordion-navigation > a, .accordion dd > a {
   background: #FFFFFF;
   font-size: 0.9em;
