--- a/app/views/renalware/pd_summaries/show.html.slim
+++ b/app/views/renalware/pd_summaries/show.html.slim
@@ -2,13 +2,49 @@
   = render partial: 'renalware/pd_regimes/current_regime' unless @current_regime.nil?
 
   = field_set_tag "CAPD Regimes (#{@capd_regimes.length})" do
-    = render partial: 'renalware/patients/capd_regimes'
+    - if @capd_regimes.empty?
+      .call-to-action
+        = link_to new_patient_pd_regime_path(@patient, type: "CAPDRegime") do
+          i.fa.fa-plus-circle
+          | Enter CAPD Regime
+    - else
+      = render partial: "renalware/patients/capd_regimes"
+      .right
+        = link_to "Add CAPD Regime", new_patient_pd_regime_path(@patient, type: "CAPDRegime"),
+            class: 'button tiny'
 
   = field_set_tag "APD Regimes (#{@apd_regimes.length})" do
-    = render partial: 'renalware/patients/apd_regimes'
+    - if @apd_regimes.empty?
+      .call-to-action
+        = link_to new_patient_pd_regime_path(@patient, type: "APDRegime") do
+          i.fa.fa-plus-circle
+          | Enter APD Regime
+    - else
+      = render partial: "renalware/patients/apd_regimes"
+      .right
+        = link_to "Add APD Regime", new_patient_pd_regime_path(@patient, type: "APDRegime"),
+            class: 'button tiny'
 
   = field_set_tag "Peritonitis Episodes (#{@peritonitis_episodes.length})" do
-    = render partial: "renalware/patients/peritonitis_episodes"
+    - if @peritonitis_episodes.empty?
+      .call-to-action
+        = link_to new_patient_peritonitis_episode_path(@patient) do
+          i.fa.fa-plus-circle
+          | Enter Peritonitis Episode
+    - else
+      = render partial: "renalware/patients/peritonitis_episodes"
+      .right
+        = link_to "Add Peritonitis Episode", new_patient_peritonitis_episode_path(@patient),
+            class: 'button tiny'
 
   = field_set_tag "Exit Site Infections (#{@exit_site_infections.length})"
-    = render partial: "renalware/patients/exit_site_infections"
+    - if @exit_site_infections.empty?
+      .call-to-action
+        = link_to new_patient_exit_site_infection_path(@patient) do
+          i.fa.fa-plus-circle
+          | Enter Exit Site Infection
+    - else
+      = render partial: "renalware/patients/exit_site_infections"
+      .right
+        = link_to "Add Exit Site Infection", new_patient_exit_site_infection_path(@patient),
+            class: 'button tiny'
