--- a/app/views/renalware/clinic_visits/edit.html.slim
+++ b/app/views/renalware/clinic_visits/edit.html.slim
@@ -1,6 +1,7 @@
 = render layout: "renalware/patients/layout", locals: { title: "Clinic Visits" } do
   = simple_form_for [@patient, @clinic_visit],
-    url: patient_clinic_visit_path(patient_id: @patient.to_param, id: @clinic_visit.to_param) do |f|
+    url: patient_clinic_visit_path(patient_id: @patient.to_param, id: @clinic_visit.to_param),
+    wrapper: :horizontal_form do |f|
 
     = render partial: 'form', locals: { f: f }
     = f.submit 'Update', class: 'button'
