--- a/app/views/renalware/clinic_visits/_form.html.slim
+++ b/app/views/renalware/clinic_visits/_form.html.slim
@@ -8,10 +8,10 @@
         .row
           .columns.small-12
             = f.input :date, as: :datetime_picker, input_html: { class: "small-input" }
-            = f.input :clinic_type_id, input_html: { class: "small-input" },
-                collection: Renalware::ClinicType.all,
+            = f.input :clinic_id, input_html: { class: "small-input" },
+                collection: Renalware::Clinic.all,
                 label_method: :name, value_method: :id,
-                include_blank: t(".clinic_type_prompt")
+                include_blank: t(".clinic_prompt")
 
       fieldset
         legend Observations
