--- a/app/views/renalware/transplants/recipient_dashboards/show.html.slim
+++ b/app/views/renalware/transplants/recipient_dashboards/show.html.slim
@@ -1,4 +1,4 @@
-= render layout: "renalware/patients/layout", locals: { title: "Transplant Summary" } do
+= render layout: "renalware/patients/layout", locals: { title: "Transplant Recipient Summary" } do
   = render "renalware/transplants/recipient_workups/summary"
   = render "renalware/transplants/registrations/summary"
   - if @registration.persisted?
