--- a/app/views/renalware/transplants/donor_workups/_navigation.html.slim
+++ b/app/views/renalware/transplants/donor_workups/_navigation.html.slim
@@ -1,5 +1,5 @@
 dl.sub-nav
-  dd= link_to "Transplant Donation Info", patient_transplants_donor_dashboard_path(@patient)
+  dd= link_to "Transplant Donor Summary", patient_transplants_donor_dashboard_path(@patient)
   dd= link_to "View", patient_transplants_donor_workup_path(@patient)
   dd= link_to "Edit", edit_patient_transplants_donor_workup_path(@patient)
 
