--- a/app/views/renalware/transplants/recipient_operations/_navigation.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_navigation.html.slim
@@ -2,7 +2,7 @@ p= render "renalware/shared/last_update", record: @recipient_operation
 
 - if @recipient_operation.persisted?
   dl.sub-nav
-    dd= link_to "Transplant Info", patient_transplants_recipient_dashboard_path(@patient)
+    dd= link_to "Transplant Recipient Summary", patient_transplants_recipient_dashboard_path(@patient)
     dd= link_to "View", patient_transplants_recipient_operation_path(@patient, @recipient_operation)
     dd= link_to "Edit", edit_patient_transplants_recipient_operation_path(@patient, @recipient_operation)
 
