--- a/app/views/renalware/transplants/recipient_dashboards/show.html.slim
+++ b/app/views/renalware/transplants/recipient_dashboards/show.html.slim
@@ -4,4 +4,5 @@
   - if @registration.persisted?
     = render "renalware/transplants/registration_statuses/list"
 
+  = render "renalware/transplants/donations/recipient_list"
   = render "renalware/transplants/recipient_operations/list"
