Add placeholder to patient autocomplete

--- a/app/views/renalware/transplants/donations/_form.html.slim
+++ b/app/views/renalware/transplants/donations/_form.html.slim
@@ -20,7 +20,8 @@ ruby:
         data: { \
           autocomplete_source: search_patients_path, \
           autocomplete_rel: "#transplants_donation_recipient_id" \
-        }}
+        },
+        placeholder: "Starting entering last name (min. 2 characters)"}
     = f.input :recipient_id, as: :hidden
     = f.input :blood_group_compatibility, as: :inline_radio_buttons
     = f.input :mismatch_grade, input_html: { class: "small-input" }
