--- a/app/views/renalware/transplants/donations/show.html.slim
+++ b/app/views/renalware/transplants/donations/show.html.slim
@@ -4,7 +4,7 @@
     = render "renalware/shared/attributes_group",
         legend: "Recipient", destination: "recipient",
         resource: @donation,
-        attributes: [:relationship_with_recipient, :relationship_with_recipient_other,
+        attributes: [:recipient, :relationship_with_recipient, :relationship_with_recipient_other,
           :blood_group_compatibility, :mismatch_grade, :paired_pooled_donation]
 
     = render "renalware/shared/attributes_group",
