Change age field from Integer to nested attribute

--- a/app/assets/stylesheets/renalware/forms.css.scss
+++ b/app/assets/stylesheets/renalware/forms.css.scss
@@ -10,6 +10,9 @@ form {
   .small-input {
     max-width: 250px !important;
   }
+  .tiny-input {
+    max-width: 125px !important;
+  }
 }
 
 fieldset {
