--- a/app/views/renalware/transplants/recipient_operations/_sections_nav.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_sections_nav.html.slim
@@ -4,9 +4,10 @@ ruby:
     ["Kidney", "kidney"],
     ["Recipient", "recipient"],
     ["Donor", "donor"],
-    ["Outcome", "outcome"],
+    ["Cadaveric Donor", "cadaveric_donor"],
     ["DSA", "dsa"],
-    ["BKV", "bkv"]
+    ["BKV", "bkv"],
+    ["Outcome", "outcome"]
   ]
 
 dl.sub-nav data-magellan-expedition="fixed"
