Add UKT cause of death other

--- a/app/views/renalware/transplants/recipient_operations/_form.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_form.html.slim
@@ -61,6 +61,7 @@ ruby:
         = fcm.input :cadaveric_donor_type, input_html: { class: "small-input" }
         = fcm.input :death_certified_at, as: :datetime_picker
         = fcm.input :ukt_cause_of_death
+        = fcm.input :ukt_cause_of_death_other
         = fcm.input :warm_ischaemic_time_in_minutes, input_html: { class: "small-input" }
 
 
