Add etchnic categories

--- a/app/views/renalware/transplants/recipient_operations/_form.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_form.html.slim
@@ -45,7 +45,7 @@ ruby:
         = fcm.input :ukt_donor_number, input_html: { class: "small-input" }
         = fcm.input :ukt_notified_at, as: :datetime_picker
         = fcm.input :gender, input_html: { class: "small-input" }
-        = fcm.input :ethnic_category, input_html: { class: "small-input" }
+        = fcm.input :ethnic_category
         = fcm.input :born_on, as: :date_picker
         = render_input fcm, :age
         = fcm.input :hla
