--- a/app/views/renalware/exit_site_infections/_navigation.html.slim
+++ b/app/views/renalware/exit_site_infections/_navigation.html.slim
@@ -1,1 +1,7 @@
-= render "renalware/pd_summaries/navigation"
+- if @exit_site_infection.try(:new_record?)
+  = render "renalware/pd_summaries/navigation"
+- else
+  dl.sub-nav
+    dd= link_to "PD Summary", patient_pd_summary_path(@patient)
+    dd= link_to "View Exit Site Infection", patient_exit_site_infection_path(@patient, @exit_site_infection)
+    dd= link_to "Edit Exit Site Infection", edit_patient_exit_site_infection_path(@patient, @exit_site_infection)
