--- a/app/views/renalware/peritonitis_episodes/_navigation.html.slim
+++ b/app/views/renalware/peritonitis_episodes/_navigation.html.slim
@@ -1,1 +1,7 @@
-= render "renalware/pd_summaries/navigation"
+- if @peritonitis_episode.try(:new_record?)
+  = render "renalware/pd_summaries/navigation"
+- else
+  dl.sub-nav
+    dd= link_to "PD Summary", patient_pd_summary_path(@patient)
+    dd= link_to "View Peritonitis Episode", patient_peritonitis_episode_path(@patient, @peritonitis_episode)
+    dd= link_to "Edit Peritonitis Episode", edit_patient_peritonitis_episode_path(@patient, @peritonitis_episode)
