--- a/app/views/renalware/peritonitis_episodes/show.html.slim
+++ b/app/views/renalware/peritonitis_episodes/show.html.slim
@@ -1,40 +1,36 @@
 - title = "Peritonitis Episode - Diagnosed: #{ l @peritonitis_episode.diagnosis_date }"
 = render layout: "renalware/patients/layout", locals: { title: title } do
-  p
-    = "Last Updated: #{@peritonitis_episode.updated_at}"
-    = pipe_separator
-    = link_to "Edit", edit_patient_peritonitis_episode_path(@patient, @peritonitis_episode.id)
+
+  = field_set_tag "Episode" do
+    dl
+      dt Last Updated:
+      dd= @peritonitis_episode.updated_at
+
+  = field_set_tag "Treatment" do
+    .row
+      dl
+        .large-6.columns
+          dt Start
+          dl= l @peritonitis_episode.treatment_start_date
+        .large-6.columns
+          dt End
+          dl= l @peritonitis_episode.treatment_end_date
+
+      dl
+        .large-6.columns
+          dt Episode Type
+          dl = default_for_associated(@peritonitis_episode.episode_type, :term, "Unknown")
+        .large-6.columns
+          dt Catheter Removed
+          dl= yes_no(@peritonitis_episode.catheter_removed)
+
+  = field_set_tag "Organisms/Sensitivity" do
+    ul.table-data-list
+      = organisms_and_sensitivities(@peritonitis_episode.infection_organisms)
 
   .row
     .large-6.columns
-      fieldset
-        legend Treatment
-        .large-2.columns
-          dl
-            dt Start
-            dl= l @peritonitis_episode.treatment_start_date
-            dt End
-            dl= l @peritonitis_episode.treatment_end_date
-
-        .large-4.columns
-          dl
-            dt Episode Type
-            dl = default_for_associated(@peritonitis_episode.episode_type, :term, "Unknown")
-            dt Catheter Removed
-            dl= yes_no(@peritonitis_episode.catheter_removed)
-
-    .large-6.columns
-      fieldset
-        legend Organisms/Sensitivity:
-
-        ul.table-data-list
-          = organisms_and_sensitivities(@peritonitis_episode.infection_organisms)
-
-  .row
-    .large-6.columns
-      fieldset
-        legend White Cell Count:
-
+      = field_set_tag "White Cell Count" do
         ul
           li= "Total: #{default_for_blank_units(@peritonitis_episode.white_cell_total, "x 10\u2079", "N/A")}"
           li= "Neutro: #{default_for_blank_units(@peritonitis_episode.white_cell_neutro, "%", "N/A")}"
@@ -43,9 +39,7 @@
           li= "Other: #{default_for_blank_units(@peritonitis_episode.white_cell_other, "%", "N/A")}"
 
     .large-6.columns
-      fieldset
-        legend Causes/Symptoms
-
+      = field_set_tag "Causes/Symptoms" do
         ul.table-data-list
           li= "Line Break: #{yes_no(@peritonitis_episode.line_break)}"
           li= "Exit Site Infection: #{yes_no(@peritonitis_episode.exit_site_infection)}"
@@ -55,14 +49,11 @@
 
   .row
     .large-6.columns
-      fieldset
-        legend Antibiotics/Routes
-
+      = field_set_tag "Antibiotics/Routes" do
         ul.table-data-list
           = medication_and_route(@peritonitis_episode.medications)
 
-    .large-6.columns
-      fieldset
-        legend Peritonitis Episode Notes
-
+  .row
+    .large-12.columns
+      = field_set_tag "Peritonitis Episode Notes" do
         p= @peritonitis_episode.notes
