--- a/app/views/renalware/pd_regimes/_current_regime.html.slim
+++ b/app/views/renalware/pd_regimes/_current_regime.html.slim
@@ -1,52 +1,48 @@
-fieldset.current-regime
-  legend Current PD Regime
-
+=field_set_tag "Current PD Regime", class: "current-regime"
   - @current_regime.each do |current|
-
-    .large-3.columns
-      dl
-        dt Regime Start Date:
-        dl=l current.start_date
-
-        dt Regime End Date:
-        dl=default_for_blank_date(current.end_date, 'Pending')
-
-        dt Treatment:
-        dl= current.treatment
-
-        dt On additional HD?:
-        dl= yes_no(current.add_hd)
-
-    .large-3.columns
-      dl
-        dt Average Daily Glucose:
+    .row
+      .large-3.columns
         dl
-        ul style="list-style-type: disc"
-          li
-            b 1.36 %
-            | &nbsp;
-            = "#{ default_daily_glucose_average(current.glucose_ml_percent_1_36) } ml"
+          dt Regime Start Date:
+          dl=l current.start_date
 
-          li
-            b 2.27 %
-            | &nbsp;
-            = "#{ default_daily_glucose_average(current.glucose_ml_percent_2_27) } ml"
+          dt Regime End Date:
+          dl= default_for_blank_date(current.end_date, 'Pending')
 
-          li
-            b 3.86 %
-            | &nbsp;
-            = "#{ default_daily_glucose_average(current.glucose_ml_percent_3_86) } ml"
+          dt Treatment:
+          dl= current.treatment
 
-    .large-6.columns
-      - if current.type == 'Renalware::APDRegime'
-        = render partial: 'renalware/pd_regimes/current_apd_regime', locals: { current: current }
+          dt On additional HD?:
+          dl= yes_no(current.add_hd)
 
-    .large-12.columns
-      .section-underliner.padding-top-1
-        b Bags:
+      .large-3.columns
+        dl
+          dt Average Daily Glucose:
+          dl
+          ul style="list-style-type: disc"
+            li
+              b 1.36 %
+              | &nbsp;
+              = "#{ default_daily_glucose_average(current.glucose_ml_percent_1_36) } ml"
 
+            li
+              b 2.27 %
+              | &nbsp;
+              = "#{ default_daily_glucose_average(current.glucose_ml_percent_2_27) } ml"
+
+            li
+              b 3.86 %
+              | &nbsp;
+              = "#{ default_daily_glucose_average(current.glucose_ml_percent_3_86) } ml"
+
+      .large-6.columns
+        - if current.type == 'Renalware::APDRegime'
+          = render partial: 'renalware/pd_regimes/current_apd_regime', locals: { current: current }
+
+    .row
       .large-12.columns
+        .section-underliner.padding-top-1
+          b Bags:
+
         ul
           = pd_regime_bags(current.pd_regime_bags)
-
-
