--- a/app/views/renalware/pd_regimes/_navigation.html.slim
+++ b/app/views/renalware/pd_regimes/_navigation.html.slim
@@ -1,1 +1,7 @@
-= render "renalware/pd_summaries/navigation"
+- if @pd_regime.try(:new_record?)
+  = render "renalware/pd_summaries/navigation"
+- else
+  dl.sub-nav
+    dd= link_to "PD Summary", patient_pd_summary_path(@patient)
+    dd= link_to "View Regime", patient_pd_regime_path(@patient, @pd_regime)
+    dd= link_to "Edit Regime", edit_patient_pd_regime_path(@patient, @pd_regime)
