--- a/app/views/renalware/transplants/recipient_operations/_list.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_list.html.slim
@@ -19,6 +19,7 @@ fieldset.status-history
             th Site
             th Failure Date
             th Failure Cause
+            th Followup
           tbody
             - @recipient_operations.each do |operation|
               tr
@@ -29,8 +30,21 @@ fieldset.status-history
                 td= operation.document.recipient.age
                 td= operation.document.donor.type.try(:text)
                 td= operation.transplant_site
-                td= l operation.document.outcome.failed_on
-                td= operation.document.outcome.failure_cause
+                - if operation.followup
+                  td= l operation.followup.transplant_failed_on
+                  td= operation.followup.transplant_failure_cause_description
+                - else
+                  td
+                  td
+                td
+                  - if operation.followup
+                    = link_to "View", patient_transplants_recipient_operation_followup_path(@patient, operation)
+                    = pipe_separator
+                    = link_to "Update", edit_patient_transplants_recipient_operation_followup_path(@patient, operation)
+                  - else
+                    - url = new_patient_transplants_recipient_operation_followup_path(@patient, operation)
+                    = link_to "Enter details", url
+
 
     .row
       .large-12.columns
