Make asystolic a yes/no field

--- a/app/views/renalware/transplants/recipient_operations/_form.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_form.html.slim
@@ -25,7 +25,7 @@ ruby:
         locals: { legend: "Kidney", name: "kidney" } do
       = fd.simple_fields_for :kidney, fd.object.kidney do |fcm|
         = fcm.input :side, input_html: { class: "small-input" }
-        = fcm.input :asyst
+        = fcm.input :asystolic, as: :inline_radio_buttons
         = render_input fcm, :age
         = fcm.input :weight, input_html: { class: "small-input" }
 
