--- a/app/views/renalware/transplants/recipient_operations/show.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/show.html.slim
@@ -6,7 +6,7 @@
         resource: @recipient_operation,
         attributes: [:performed_on, :theatre_case_start_time, :donor_kidney_removed_from_ice_at,
           :kidney_perfused_with_blood_at, :operation_type, :transplant_site,
-          :cold_ischaemic_time, :notes]
+          :cold_ischaemic_time, :warm_ischaemic_time, :notes]
 
     - ["Recipient", "Donor", "Cadaveric Donor", "DSA", "BKV", "Outcome"].each do |group|
       = render "renalware/shared/documents/attributes_group",
