Rename DSA and BKV

--- a/app/views/renalware/transplants/recipient_operations/_sections_nav.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_sections_nav.html.slim
@@ -4,8 +4,8 @@ ruby:
     ["Recipient", "recipient"],
     ["Donor", "donor"],
     ["Cadaveric Donor", "cadaveric_donor"],
-    ["DSA", "dsa"],
-    ["BKV", "bkv"],
+    ["Donor Specific Antibodies", "donor_specific_antibodies"],
+    ["BK Virus", "bk_virus"],
     ["Outcome", "outcome"]
   ]
 
