--- a/app/views/renalware/transplants/recipient_operations/_form.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_form.html.slim
@@ -61,15 +61,15 @@ ruby:
 
 
     = render layout: "renalware/shared/fieldset",
-        locals: { legend: "DSA", name: "dsa" } do
-      = fd.simple_fields_for :dsa, fd.object.dsa do |fcm|
+        locals: { legend: "Donor Specific Antibodies", name: "donor_specific_antibodies" } do
+      = fd.simple_fields_for :donor_specific_antibodies, fd.object.donor_specific_antibodies do |fcm|
         = fcm.input :tested_on, as: :date_picker
         = fcm.input :results
         = fcm.input :notes, as: :text, input_html: { rows: 2 }
 
     = render layout: "renalware/shared/fieldset",
-        locals: { legend: "BKV", name: "bkv" } do
-      = fd.simple_fields_for :bkv, fd.object.bkv do |fcm|
+        locals: { legend: "BK Virus", name: "bk_virus" } do
+      = fd.simple_fields_for :bk_virus, fd.object.bk_virus do |fcm|
         = fcm.input :tested_on, as: :date_picker
         = fcm.input :results
         = fcm.input :notes, as: :text, input_html: { rows: 2 }
