Revised exit site infection to simplify interaction

--- a/app/views/renalware/exit_site_infections/new.html.slim
+++ b/app/views/renalware/exit_site_infections/new.html.slim
@@ -1,9 +1,10 @@
 = render layout: "renalware/patients/layout", locals: { title: "Exit Site Infection" } do
   = render partial: "renalware/shared/errors", locals: { model: @exit_site_infection }
 
-  = nested_form_for [@patient, @exit_site_infection] do |es|
-    = render partial: 'renalware/exit_site_infections/form', locals: { es: es }
+  = field_set_tag "Infection" do
+    = simple_form_for [@patient, @exit_site_infection] do |f|
+      = render partial: 'renalware/exit_site_infections/fields', locals: { f: f }
 
-    = submit_tag "Save", class: "button"
-    span= " or "
-    = link_to "cancel", patient_pd_summary_path(@patient)
+      = submit_tag "Save", class: "button"
+      span= " or "
+      = link_to "cancel", patient_pd_summary_path(@patient)
