--- a/app/views/renalware/exit_site_infections/_form.html.slim
+++ b/app/views/renalware/exit_site_infections/_form.html.slim
@@ -1,38 +1,8 @@
-= es.hidden_field :id
-= es.hidden_field :patient_id
-
-.row
-  .large-12.columns
-    = field_set_tag "Infection" do
-      = es.label :diagnosis_date
-      = es.date_select(:diagnosis_date, { start_year: (1.year.ago).year, end_year: (1.year.since).year, order: [:day, :month, :year] }, class: "datetime")
-
-      = es.label :outcome, "Outcome"
-      = es.text_area :outcome, cols: 50, rows: 6
-
-      = es.label :treatment, "Treatment"
-      = es.text_area :treatment, cols: 50, rows: 6
-
-.row
-  .large-12.columns
-    .section-underliner
-      h5 Organisms and their sensitivities
-
-    = es.fields_for :infection_organisms do |io|
-      = render partial: 'renalware/infection_organisms/forms', locals: { io: io }
-
-    = es.link_to_add 'Record a new organism and sensitivity', :infection_organisms, class: 'add-organism-sensitivity right'
-
-.row
-  .large-12.columns
-    .section-underliner
-      h5 Medications administered
-
-    = render partial: 'renalware/medications/medication_forms', locals: { object: es }
-    = es.link_to_add 'Add a new medication', :medications, model_object: Renalware::Medication.exit_site, class: 'add-medication right'
-
-.row
-  .large-12.columns
-    = field_set_tag "Comments" do
-      = es.label :notes, "General notes about this infection"
-      = es.text_area :notes, cols: 50, rows: 6
+= simple_form_for [patient, exit_site_infection], html: { class: local_assigns[:form_class] },
+    remote: true, wrapper: :horizontal_form do |f|
+  = render "fields", f: f
+  .row
+    .large-offset-3.large-7.columns
+      = f.button :submit, "Save", class: :tiny
+      span= " or "
+      = link_to "cancel", patient_exit_site_infection_path(patient, exit_site_infection), remote: true
