--- a/app/views/renalware/exit_site_infections/edit.html.slim
+++ b/app/views/renalware/exit_site_infections/edit.html.slim
@@ -1,7 +1,7 @@
 = render layout: "renalware/patients/layout", locals: { title: "Exit Site Infection" } do
   = render partial: "renalware/shared/errors", locals: { model: @exit_site_infection }
 
-  = nested_form_for [@patient, @exit_site_infection], method: :put do |es|
+  = simple_form_for [@patient, @exit_site_infection], method: :put do |es|
     = render partial: "renalware/exit_site_infections/form", locals: { es: es }
 
     = submit_tag "Save", class: "button"
