Add missing pregnancy field

--- a/app/views/renalware/transplants/recipient_followups/_form.html.slim
+++ b/app/views/renalware/transplants/recipient_followups/_form.html.slim
@@ -37,6 +37,7 @@ ruby:
       table
         = render_input fd, :malignancy_within_first_3_months
         = render_input fd, :malignancy_within_first_12_months
+        = render_input fd, :recipient_pregnancy
         = render_input fd, :acute_rejection_biopsy_proven
         = render_input fd, :primary_or_reccurent_renal_disease
       = fd.input :primary_or_reccurent_renal_disease_diagnosed_on, as: :date_picker
